Updated UpdatePlaceJs to update place

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
       async
       defer
     ></script>
-    <title>React App</title>
+    <title>Mern Places</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
